# kotlin-patient-portal-readiness-ledger

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md
fixtures/: portal_lanes.json
kotlin/: PortalReadiness.kt
kotlin_patient_portal_readiness_ledger/: __init__.py  cli.py  ledger.py  site.py
scripts/: check_kotlin_contract.py  check_sql.py  prerender.py  render_readme_assets.ps1  run_demo.py  smoke_check.py
sql/: portal_readiness_contract.sql
tests/: test_ledger.py
